# vobsubocr

./: Cargo.toml
src/: lib.rs  main.rs  memory_stats.rs  ocr.rs  opt.rs  preprocessor.rs
src/pgs/: mod.rs  rle.rs  segment.rs  u24.rs
