[package]
name = "vobsubocr"
version = "0.1.1"
authors = ["Eliza Velasquez"]
edition = "2018"
description = "Converts DVD VOB subtitles to SRT subtitles with Tesseract OCR"
license = "GPL-3.0"
keywords = ["vobsub", "subtitles", "dvd", "ocr"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
repository = "https://github.com/elizagamedev/vobsubocr/"
homepage = "https://github.com/elizagamedev/vobsubocr/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["cargo", "derive"] }
image = "0.24"
iter_fixed = "0.3.1"
leptess = "0.14.0"
log = "0.4"
rayon = "1.8"
scoped-tls-hkt = "0.1.4"
simple_logger = { version = "4.3.0", features = ["colors"] }
subparse = { version = "0.7.0", path = "../subparse" }
#vobsub = { version = "0.2.3", path = "../subtitles-utils" }
subtitles-utils = { path = "../subtitles-utils" }
thiserror = "1.0"

[profile.release]
lto = "thin"
